overflow hidden fix en la portada

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -228,6 +228,7 @@ div.jGrowl div.jGrowl-notification, div.jGrowl div.jGrowl-closer
       @extend .grid_8
       position: relative
       .c-image-and-title
+        overflow: hidden
         height: 235px
         img
           z-index: 2
